--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  intl: ^0.17.0
+  provider: ^6.0.3
+  flutter_bloc: ^7.0.1
+  image_picker: ^0.8.4
 
 dev_dependencies:
   flutter_test:
