--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^6.0.3
   flutter_bloc: ^7.0.1
   image_picker: ^0.8.4
+  permission_handler: ^9.0.2
+  fluttertoast: ^8.0.9
+
 
 dev_dependencies:
   flutter_test:
