--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.4
   permission_handler: ^9.0.2
   fluttertoast: ^8.0.9
+  flutter_screenutil: ^5.0.1
 
 
 dev_dependencies:
