--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^9.0.2
   fluttertoast: ^8.0.9
   flutter_screenutil: ^5.0.1
+  http: ^0.13.3
 
 
 dev_dependencies:
