--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fluttertoast: ^8.0.9
   flutter_screenutil: ^5.0.1
   http: ^0.13.3
+  shared_preferences: ^2.0.7
 
 
 dev_dependencies:
